@@ -1,7 +1,7 @@
 #!/bin/bash
 # Automatic test of Tcpchat
 
-export VERS="V2.1"
+export VERS="V"`tcpchat -v`
 
 export DBG=1
 
@@ -181,9 +181,14 @@ echo -n "Test indirect 1: "
 echo -en "Content2" > $EXPECTED
 try $EXPECTED indirect 0 1
 
+# Indirect a
+echo -n "Test indirect a: "
+echo -en "ERROR\n" > $EXPECTED
+try $EXPECTED indirect 0 a
+
 # Indirect 2
 echo -n "Test indirect 2: "
-echo -en "" > $EXPECTED
+echo -en "ERROR\n" > $EXPECTED
 try $EXPECTED indirect 0 2
 
 # Clean
