@@ -3,6 +3,7 @@
 <!-- Example of TCP chat script -->
 
 <chats>
+  <version Version="&Version;"/>
   <!-- HTTP 0.9: Send file -->
   <!-- HTTP 1.0 or 1.1: Skip noise, send header + file -->
   <chat Name="http" TimeoutMs="&None;" Regexp="true"
@@ -48,7 +49,7 @@
         <eval Variable="DATE">
           <command>echo -n `date "+%a, %d %b %Y %H:%M:00 %Z"`</command>
         </eval>
-        <set Variable="SERVER_ID">tcpchat/V2.1</set>
+        <set Variable="SERVER_ID">tcpchat/V&Version;</set>
         <send>HTTP/1.0 200 OK</send>
         <send>Date: ${DATE}</send>
         <send>Server: ${SERVER_ID}</send>
@@ -241,6 +242,7 @@
         <log>User ${USER} logged out</log>
       </script>
     </cond>
+    <wait DelayMs="500"/>
     <close/>
   </script>
 
@@ -253,6 +255,7 @@
         <send>error-handler-1</send>
       </script>
     </chdir>
+    <wait DelayMs="500"/>
     <close/>
   </script>
   <chat Name="error2">error2</chat>
@@ -265,6 +268,7 @@
       </script>
     </chdir>
     <send>after-error-2</send>
+    <wait DelayMs="500"/>
     <close/>
   </script>
 
@@ -273,8 +277,24 @@
     <set Variable="V1">Content1</set>
     <set Variable="V2">Content2</set>
     <read Regexp="true" Assign="Index=${0}">.*</read>
-    <set Variable="Index" Compute="true">${Index}+1</set>
-    <set Variable="Result">${V${Index}}</set>
+    <assign>
+      <expression Variable="Index" Compute="true">${Index}+1</expression>
+      <error/>
+      <script>
+        <send>ERROR</send>
+        <wait DelayMs="500"/>
+        <close/>
+      </script>
+    </assign>
+    <assign>
+      <expression Variable="Result">${V${Index}}</expression>
+      <error/>
+      <script>
+        <send>ERROR</send>
+        <wait DelayMs="500"/>
+        <close/>
+      </script>
+    </assign>
     <send NewLine="false">${Result}</send>
     <close/>
   </script>
