@@ -3,6 +3,8 @@ HISTORY
 Main changes
 
 [horizontal]
+*2012/06/20*:: Add versionning and statement "assign" in tcpchat V2.1
+
 *2012/06/20*:: Add option -p (--progress) for progress bar in xml_checker V17.0
 
 *2012/05/10*:: Add Shift with keys arrows and pages
